orquestration/blueperf/app/istio/virtual-services.yaml
###################################################################
# Virtual Services
###################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acmeair
spec:
  hosts:
  - "*"
  gateways:
  - acmeair-gateway
  http:
  - match:
    - uri:
        prefix: /flight
    route:
    - destination:
        port:
          number: 9080
        host: acmeair-flight-service
  - match:
    - uri:
        prefix: /booking
    route:
    - destination:
        port:
          number: 9080
        host: acmeair-booking-service
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        port:
          number: 9080
        host: acmeair-customer-service
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        port:
          number: 9080
        host: acmeair-auth-service
  - match:
    - uri:
        prefix: /acmeair
    route:
    - destination:
        port:
          number: 9080
        host: acmeair-main-service
